@@ -1,0 +1,2 @@
+%Error: --mod-prefix argument must be a legal C++ identifier: 'bad/name'
+%Error: Exiting due to
